[tool.poetry]
name = "FastAPIsecret"
version = "0.1.0"
description = "One-time secrets"
authors = ["Ivan"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
cryptography = "^41.0.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
websockets = "^11.0"
asyncpg = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
isort = "^5.10.1"

[poetry.group.dev.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
